--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-                android:value=[YOUR_GOOGLE_API_HERE]/>
+                android:value="AIzaSyB_c--wtO_Rz9fIZS2DqCQ5uC-fAbeGOgk"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
