Fetching live location & starting to develop notifications

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyASNCTryE4sjy7zfs1VYzOYvp1r7r1FjXs"/>
+                android:value="[YOUR_GOOGLE_API_HERE]"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
