--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.2
+  firebase_database: ^11.3.6
+  firebase_core: ^3.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
-  image_picker: ^1.1.2
-  path_provider: ^2.1.5
   path: ^1.9.1
   location: ^8.0.0
   google_maps_flutter: ^2.11.0
   http: ^1.3.0
-  geolocator: ^13.0.4
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
