--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.4.2
   firebase_database: ^11.3.6
   firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
 
 dev_dependencies:
   flutter_test:
