--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  sqflite: ^2.4.2
   firebase_database: ^11.3.6
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  cupertino_icons: ^1.0.8
   provider: ^6.1.2
   path: ^1.9.1
   location: ^8.0.0
   google_maps_flutter: ^2.11.0
   http: ^1.3.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
