--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   flutter_launcher_icons: ^0.14.3
+  http: ^1.4.0
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +48,6 @@ dev_dependencies:
   path: ^1.9.1
   location: ^8.0.0
   google_maps_flutter: ^2.11.0
-  http: ^1.3.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
